--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
+		"gray-matter": "^4.0.3",
+		"mdsvex": "^0.10.6",
 		"svelte": "^3.54.0",
 		"vite": "^4.2.0"
 	},
+	"dependencies": {
+		"localforage": "^1.10.0",
+		"marked": "^4.3.0"
+	},	
 	"type": "module"
 }
